--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/artdehoyos/fcc-header-parser/issues"
   },
-  "homepage": "https://github.com/artdehoyos/fcc-header-parser#readme"
+  "homepage": "https://github.com/artdehoyos/fcc-header-parser#readme",
+  "dependencies": {
+    "body-parser": "^1.14.2",
+    "express": "^4.13.3"
+  }
 }
